--- a/testdata.yml
+++ b/testdata.yml
@@ -10,6 +10,7 @@ requests: {
         pathParams: {},
         params: {},
         data: {},
+        json: {},
         headers: {}},
     req2:
       { name: req2,
@@ -19,6 +20,7 @@ requests: {
         pathParams: {},
         params: { },
         data: { },
+        json: {},
         headers: { }}
 }
 
