--- a/.github/workflows/deploy_and_test.yml
+++ b/.github/workflows/deploy_and_test.yml
@@ -19,3 +19,4 @@ jobs:
       - name: Run tests
         run: |
           python run_api_test.py testdata.yml
+          python -m unittest discover
