--- a/.github/workflows/deploy_and_test.yml
+++ b/.github/workflows/deploy_and_test.yml
@@ -18,5 +18,5 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         run: |
-          python run_api_test.py testdata.yml
+          python run_api_test.py data/apitester/testdata.yml
           python -m unittest discover
