--- a/.github/workflows/deploy_and_test.yml
+++ b/.github/workflows/deploy_and_test.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v5
       - name: Install the project
-        run: uv sync --locked --all-extras --dev
+        run: uv sync
       - name: Run tests
         run: |
           python run_api_test.py data/apitester/testdata.yml
