--- a/.github/workflows/deploy_and_test.yml
+++ b/.github/workflows/deploy_and_test.yml
@@ -14,7 +14,9 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v5
       - name: Install the project
-        run: uv sync
+        run: |
+          uv sync
+          uv pip install -r requirements.txt
       - name: Run tests
         run: |
           python run_api_test.py data/apitester/testdata.yml
