--- a/.github/workflows/deploy_and_test.yml
+++ b/.github/workflows/deploy_and_test.yml
@@ -7,16 +7,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
           python-version-file: "pyproject.toml"
+
       - name: Install uv
         uses: astral-sh/setup-uv@v5
-      - name: Install the project
+
+      - name: Install project and dependencies
         run: |
-          uv sync
-          uv pip install -r requirements.txt
+          uv pip install .
+
       - name: Run tests
         run: |
           python run_api_test.py data/apitester/testdata.yml
